Update mock data to be about DataVault startup

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Comprehensive Startup Data Room</title>
+    <title>DataVault - Secure Data Rooms for Startups</title>
+    <meta name="description" content="DataVault provides secure, beautiful data rooms for modern startups. Streamline your fundraising with bank-grade security and stunning design." />
   </head>
   <body>
     <div id="root"></div>
